<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_edit"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_edit"
        android:visible="true"/>
    <item
        android:id="@+id/item_restore"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_restore"
        android:visible="true"/>
    <item
        android:id="@+id/item_delete"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_delete"
        android:visible="true"/>
    <item
        android:id="@+id/item_get_stuck"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_get_stuck"
        android:visible="true"/>

</menu>