<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/info_text_dialog_width"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <TextView
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/dialog_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:background="@drawable/btn_dialog_bg_states"
            android:text="@string/title_timer"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/titleBar_textSize"
            android:id="@+id/tvTitleDialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_timer_time"
            android:textColor="@color/primary_text"
            android:gravity="center"
            android:text="00:00:000"
            android:id="@+id/tvTimerValue" />
        <TextView
            android:layout_marginTop="@dimen/dialog_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:background="@drawable/btn_dialog_bg_states"
            android:text="@string/timer_next_set"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_titleBar_subtitle"
            android:id="@+id/tvNextSet" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_dialog_btn_height"
        android:layout_margin="@dimen/info_dialog_margin_btn"
        android:gravity="right">

        <TextView
            android:text="@string/btn_cancel"
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/info_dialog_margin_btn"
            android:paddingRight="@dimen/info_dialog_margin_btn"
            android:minWidth="@dimen/info_dialog_btn_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/btn_dialog_bg_states"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size_info_btn"/>
    </LinearLayout>

</LinearLayout>