<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/info_text_dialog_width"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">
        <TextView
            android:layout_marginBottom="@dimen/dialog_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:background="@drawable/btn_dialog_bg_states"
            android:text="@string/settings_time_between_sets"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/titleBar_textSize"
            android:id="@+id/tvTitleDialog" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilMinutes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/info_dialog_margin_btn">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:maxLength="2"
                    android:inputType="number"
                    android:hint="@string/minutes"
                    android:textColorHint="@color/secondary_text"
                    android:textSize="@dimen/info_textsize"
                    android:textColor="@color/primary_text"
                    android:gravity="center"
                    android:text="01"
                    android:id="@+id/edtMinutes" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=":"
                android:textSize="@dimen/info_textsize"
                android:textColor="@color/primary_text"
                android:gravity="center"
                android:id="@+id/tvSig"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilSeconds"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/info_dialog_margin_btn">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:maxLength="2"
                    android:hint="@string/seconds"
                    android:textColorHint="@color/secondary_text"
                    android:inputType="number"
                    android:textSize="@dimen/info_textsize"
                    android:textColor="@color/primary_text"
                    android:gravity="center"
                    android:text="30"
                    android:id="@+id/edtSeconds" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_dialog_btn_height"
        android:layout_margin="@dimen/info_dialog_margin_btn"
        android:gravity="right">

        <TextView
            android:id="@+id/btnCancel"
            android:text="@string/btn_cancel"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/info_dialog_margin_btn"
            android:paddingRight="@dimen/info_dialog_margin_btn"
            android:minWidth="@dimen/info_dialog_btn_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/btn_dialog_bg_states"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/info_btn_textsize" />

        <TextView
            android:text="@string/btn_save"
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/info_dialog_margin_btn"
            android:paddingRight="@dimen/info_dialog_margin_btn"
            android:minWidth="@dimen/info_dialog_btn_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/info_dialog_margin_btn"
            android:gravity="center"
            android:background="@drawable/btn_dialog_bg_states"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/info_btn_textsize"/>
    </LinearLayout>

</LinearLayout>