<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingRight="@dimen/titleBar_icons_padding"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBar_height"
        android:layout_weight="0"
        android:background="@color/primary"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="@dimen/btn_back_size"
            android:layout_height="@dimen/btn_back_size"
            android:scaleType="fitCenter"
            android:clickable="true"
            android:src="@drawable/btn_cancel_states"
            android:padding="@dimen/titleBar_margin"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_activity_last_set"
            android:gravity="center_vertical|left"
            android:layout_marginLeft="@dimen/titleBar_margin"
            android:textSize="@dimen/titleBar_textSize"
            android:textColor="@color/white"
            android:id="@+id/tvTitleActivity" />

        <TextView
            android:text="@string/btn_save"
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/info_dialog_btn_padding"
            android:paddingRight="@dimen/info_dialog_btn_padding"
            android:minWidth="@dimen/info_dialog_btn_width"
            android:layout_height="@dimen/info_dialog_btn_height"
            android:layout_marginLeft="@dimen/info_dialog_margin_btn"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/btn_bg_states"
            android:textColor="@color/white"
            android:textSize="@dimen/info_btn_textsize"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:background="@color/primary_light"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_margin="@dimen/titleBar_margin"
            android:paddingTop="@dimen/titleBar_margin"
            android:paddingLeft="@dimen/titleBar_margin"
            android:paddingRight="@dimen/titleBar_margin"
            android:paddingBottom="@dimen/titleBar_height"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:text="@string/info_exercise_reps_label"
                    android:id="@+id/tvRepsLastSetLabel"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/add_exercise_textsize"
                    android:gravity="center_vertical"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilRepsCountLastSet"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <EditText
                        android:focusable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_enter_repeat_count"
                        android:gravity="right|center"
                        android:textColorHint="@color/secondary_text"
                        android:id="@+id/edtCountRepsLastSet"
                        android:textColor="@color/primary_text"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="@dimen/add_exercise_textsize"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="@dimen/titleBar_usual_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/info_exercise_weight_label"
                    android:id="@+id/tvWeightLastSetLabel"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/add_exercise_textsize"
                    android:gravity="center_vertical"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/tvWeightLastSet"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/add_exercise_textsize"
                    android:gravity="right|center"/>

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="@dimen/titleBar_usual_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/info_exercise_calculated_1rm"
                    android:id="@+id/tvCalcWeightLastSetLabel"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/add_exercise_textsize"
                    android:gravity="center_vertical"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/tvCalcWeightLastSet"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/add_exercise_textsize"
                    android:gravity="right|center"/>

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="@dimen/titleBar_usual_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/info_exercise_aim_weight"
                    android:id="@+id/tvAimWeightLabel"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/add_exercise_textsize"
                    android:gravity="center_vertical"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="120"
                    android:id="@+id/tvAimWeight"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/add_exercise_textsize"
                    android:gravity="right|center"/>
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="@dimen/titleBar_usual_margin"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/info_exercise_percent_of_aim"
                    android:id="@+id/tvPercentLabel"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/add_exercise_textsize"
                    android:gravity="center_vertical"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="0%"
                    android:id="@+id/tvPercent"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/add_exercise_textsize"
                    android:gravity="right|center"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>